<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/header_sms">

        <SwitchPreferenceCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="@string/key_enable_sms"
            app:iconSpaceReserved="false"
            app:title="@string/enable_sms" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:key="@string/key_target_sms"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_sms"
            app:iconSpaceReserved="false"
            app:summary="@string/target_summary_sms" />

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/header_telegram"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="@string/key_enable_telegram"
            app:title="@string/enable_telegram" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_telegram"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_telegram"
            app:summary="@string/key_target_telegram_summary"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_telegram_apikey"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_telegram_apikey"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/header_rocket_chat"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="@string/key_enable_rocket_chat"
            app:title="@string/enable_rocket_chat" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_rocket_chat_base_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/key_rocket_chat_base_url_title"
            app:summary="@string/key_rocket_chat_base_url_summary"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_rocket_chat_user_id"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/key_rocket_chat_user_id_title"
            app:summary="@string/key_rocket_chat_user_id_summary"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_rocket_chat_auth_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/key_rocket_chat_auth_key_title"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_rocket_chat_channel"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/channel_title_rocket_chat"
            android:summary="@string/channel_title_rocket_chat_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/header_web"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="@string/key_enable_web"
            app:title="@string/enable_web" />
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/key_target_web"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/target_title_web"
            android:summary="@string/target_summary_web"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>